# minesweeper

./: .clang-tidy  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt
app/src/: main.cpp
app/src/ui/: cli.cpp  cli.hpp
core/: CMakeLists.txt
core/src/: bomb_generator.cpp  difficulty.cpp  field.cpp  field.hpp  game.cpp  game_manager.cpp
core/src/core/: difficulty.hpp  game.hpp
core/test/: CMakeLists.txt
core/test/core/: difficulty.test.cpp
scripts/: build.sh  run-tests.sh  watch.sh
src/: field.cpp  field.h  game.cpp  game.h  main.cpp
src/core/: bomb_generator.cpp  bomb_generator.hpp  field.cpp  field.hpp  game.cpp  game.h  game.hpp  game_manager.cpp  game_manager.hpp
src/ui/: cli.cpp  cli.hpp  user_interface.hpp
